fix horizontal overflow on result screen at 80%

--- a/static/ui-kit/custom/scss/basic-io-layout.scss
+++ b/static/ui-kit/custom/scss/basic-io-layout.scss
@@ -22,6 +22,7 @@
   height: 470px;
   margin-bottom: $padding-medium;
   overflow-y: auto;
+  overflow-x: hidden;
   & p {
     font-size: 32px;
     letter-spacing: -1px;
